# OPAL

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  test.c
include/: opal.h
include/opal/: pch.h  sound.h  stream.h  synth.h  version.h.in
src/: opal.c  sound.c  stream.c  synth.c  version.c
